--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -23,7 +23,10 @@ body {
 	/*解决移动端点击链接元素出现蓝色边框或者出现半透明蓝色背景*/
 	-webkit-tap-highlight-color: transparent;
     /*-webkit-appearance: none;*/
-	appearance: none;
+	appearance: none;/* 默认的按钮会不显示 */
+}
+input[type="checkbox"],input[type="radio"] {/*appearance: none;会导致默认样式按钮不显示；  checkbox按钮允许显示 */
+	appearance: checkbox;
 }
 
 /* 去除黑点 */
@@ -47,9 +50,10 @@ a:hover{
 a:focus { 
 	outline: none; 
 } /*去掉链接A标签周围的虚线框*/
+/**
 em{ 
 	font-style:normal;
-}
+}**/
 img{ 
 	border:0;
 }
@@ -157,6 +161,8 @@ https://github.com/youzan/vant/blob/main/packages/vant/src/style/css-variables.l
 	height: 100%; 
 }
 
+
+
 /** 气泡弹出框项 **/
 .custom-popoverModule-1{
 	width: 150px !important;
@@ -181,6 +187,140 @@ https://github.com/youzan/vant/blob/main/packages/vant/src/style/css-variables.l
 	font-size: 12px;
 	max-width: 140px;
 }
+
+/** 头部弹出消息提示 **/
+.notifyHtml{
+	background: #1989fa;
+	height: 46px;
+}
+.notifyHtml .van-popup__close-icon--top-right{
+	top: 12px;
+}
+.notifyHtml .van-popup__close-icon {
+	color: #fff;
+}
+.notifyHtml .container{
+	margin-left: 10px;
+	margin-right: 50px;
+}
+.notifyHtml .container p{
+	color: #fff;
+	font-size: 0px;
+}
+.notifyHtml .container p span{
+	line-height: 46px;
+	font-size: 14px;
+	vertical-align:top;
+}
+
+/** Markdown编辑器帮助弹出层 **/
+.markdownEditorHelpPopup{
+	background: #fff;
+	height: 50%;
+	overflow-y: visible !important;
+}
+.markdownEditorHelpPopup .van-popup__close-icon{
+	top: -40px !important;
+}
+.markdownEditorHelpPopup .container{
+	margin: 16px;
+	overflow-y:auto;
+	-webkit-overflow-scrolling: touch;
+	height: 100%; 
+}
+.markdown-help{
+	font-size: 14px;
+	padding-bottom: 16px;
+}
+.markdown-help h2{
+	font-size: 16px;
+    font-weight: 600;
+    margin: 16px 0 16px;
+	color: #646566;
+}
+
+.markdown-help ul{
+	line-height: 24px;
+	color: #969799;
+}
+.markdown-help ul svg{
+	width: 16px;
+    height: 16px;
+    display: block;
+}
+.markdown-help ul div{
+	display: inline-block;
+    vertical-align: top;
+}
+.markdown-help li{
+	list-style: none;
+    margin-bottom: 14px;
+}
+.markdown-help li .help-icon{
+	padding: 2px 0;
+}
+.markdown-help li .help-title{
+	padding-left: 8px;
+}
+.markdown-help li .help-content{
+	float: right;
+    font-size: 14px;
+}
+.markdown-help .help-selectGrade{
+	width: 100%;
+}
+.markdown-help .help-gradeItem{
+	width: 100%;
+}
+.markdown-help .help-userGrade-needPoint{
+	margin-right: 12px;
+}
+
+
+/** Markdown编辑器Emoji弹出层 **/
+.markdownEditorEmojiPicker{
+	background: #fff;
+	height: 50%;
+	overflow-y: visible !important;
+	padding-bottom: 20px;
+}
+.markdownEditorEmojiPicker .van-popup__close-icon{
+	top: -40px !important;
+}
+.markdownEditorEmojiPicker .container{
+	margin: 16px;
+	overflow-y:auto;
+	-webkit-overflow-scrolling: touch;
+	height: 100%; 
+	
+}
+
+
+/** Markdown编辑器隐藏标签弹出层 **/
+.markdownEditorHidePicker{
+	background: #fff;
+	height: 40%;
+	overflow-y: visible !important;
+}
+.markdownEditorHidePicker .van-popup__close-icon{
+	top: -40px !important;
+}
+.markdownEditorHidePicker .container{
+	margin: 16px;
+	overflow-y:auto;
+	-webkit-overflow-scrolling: touch;
+	height: 100%; 
+}
+.markdownEditorHidePicker .van-picker__confirm {
+	color: #1989fa;
+}
+.markdownEditorHidePicker .van-picker {
+	margin-top: 5px;
+	border-radius: 8px 8px 0 0 !important;
+}
+
+
+
 
 /** ActionSheet 动作面板关闭图标放置窗口外 **/
 .custom-action-sheetModule{
@@ -457,3 +597,555 @@ div.code-toolbar > .toolbar > .toolbar-item > span:focus{
 	align-items: center;
 	top: 77px;
 }
+
+
+
+/** markdown样式 **/
+.bytemd{
+    /**height: calc(100vh - 100px); **/
+    height: auto !important;
+    /**height: auto !important;自适应高度，和.bytemd-editor的min-height一起使用 **/
+
+    border: 1px solid transparent !important;
+    border-bottom: 1px solid transparent !important;
+    color: #646566 !important;
+}
+.bytemd *{
+	word-break: break-all;
+}
+
+/** codemirror 依赖隐藏的 textarea 计算行高，这里将字体大小设置为行高，避免输入法遮挡内容 **/
+.bytemd .CodeMirror textarea {
+	font-size: 36px;
+}
+
+
+.bytemd-body .markdown-body ol{
+	list-style: decimal !important;
+}
+.bytemd-body .markdown-body ol li{
+	list-style-type:decimal !important;
+    list-style-position:inside !important;
+}
+.bytemd-body .markdown-body ul{
+	list-style: disc !important;
+}
+.bytemd-body .markdown-body ul li{
+	list-style-type:disc !important;
+}
+
+.bytemd-body .markdown-body pre>code{
+	font-size: 14px !important;
+	overflow-x: visible !important;
+}
+.bytemd-body .markdown-body code{
+	overflow-x: visible !important;
+}
+.bytemd-body .markdown-body .task-list-item{
+    list-style-type:none !important;
+}
+.bytemd-body .markdown-body .line-numbers .line-numbers-rows{
+	padding-top: 15px !important;
+	padding-bottom: 15px !important;
+
+    top: 0 !important;
+    border-right: 1px solid #86909C !important;
+}
+.bytemd-body .markdown-body .line-numbers .line-numbers-rows:before{
+	background: transparent !important;
+}
+.bytemd-body .markdown-body .line-numbers .line-numbers-rows:after{
+	background: transparent !important;
+}
+.bytemd-body .markdown-body .line-numbers .line-numbers-rows > span:before{
+	background: transparent !important;
+}
+.bytemd-body .markdown-body code[class*="language-"],
+pre[class*="language-"] {
+	white-space: pre-wrap !important;/*自动换行*/
+}
+
+
+/** 隐藏‘目录图标’**/
+.bytemd-toolbar-right [bytemd-tippy-path='0'] {
+	display: none;
+} 
+/** 隐藏默认的‘帮助图标’**/
+.bytemd-toolbar-right [bytemd-tippy-path='1'] {
+	display: none;
+} 
+/** 隐藏‘源代码图标’**/
+.bytemd-toolbar-right [bytemd-tippy-path='5'] {
+	display: none;
+} 
+/** 隐藏‘回到顶部’**/
+.bytemd-status-right span{
+	display: none;
+}
+.bytemd-toolbar {
+	padding: 8px 0px !important;
+/** border-bottom: 1px solid #e5e6eb !important;**/
+	border-bottom: 1px solid transparent !important;
+	background-color: #fff !important;
+
+	height: 32px !important;
+	overflow: visible !important;
+
+}
+.bytemd-toolbar-tab-active {
+    color: #1989fa !important;
+}
+.bytemd-toolbar-tab{
+	padding-left: 0px !important;
+	padding-right: 8px !important;
+}
+.bytemd-toolbar-icon {
+    margin-left: 0px !important;
+	margin-right: 8px !important;
+}
+.bytemd-toolbar-right div:last-child {
+	margin-right: 0px !important;
+}
+.bytemd-fullscreen{
+	z-index: 102;
+}
+.bytemd-fullscreen .bytemd-toolbar-left div:first-child {
+	margin-left: 16px !important;
+}
+
+/** 工具栏吸顶 **/
+.bytemd .js-is-sticky{
+	z-index: 8;
+}
+
+.bytemd-toolbar-right{
+	float: left !important;
+}
+.bytemd-body {
+	height: calc(100% - 68px) !important;
+	width: 100% !important;
+	margin-top: 8px !important;
+}
+.addCommentModule .bytemd-toolbar{
+	width: 100%;
+	height: 40px !important;
+	padding-top: 15px !important;
+}
+.addCommentModule + .van-popup__close-icon{/** .addCommentModule兄弟节点 **/
+	z-index: 2111 !important;
+}
+.quoteCommentModule .bytemd-toolbar{
+	width: 100%;
+	height: 40px !important;
+	padding-top: 15px !important;
+}
+.quoteCommentModule + .van-popup__close-icon{/** .quoteCommentModule兄弟节点 **/
+	z-index: 2111 !important;
+}
+.editCommentModule .bytemd-toolbar{
+	width: 100%;
+	height: 40px !important;
+	padding-top: 15px !important;
+}
+.editCommentModule + .van-popup__close-icon{/** .editCommentModule兄弟节点 **/
+	z-index: 2111 !important;
+}
+.appendQuestionModule .bytemd-toolbar{
+	width: 100%;
+	height: 40px !important;
+	padding-top: 15px !important;
+}
+.appendQuestionModule + .van-popup__close-icon{/** .appendQuestionModule兄弟节点 **/
+	z-index: 2111 !important;
+}
+.addAnswerModule .bytemd-toolbar{
+	width: 100%;
+	height: 40px !important;
+	padding-top: 15px !important;
+}
+.addAnswerModule + .van-popup__close-icon{/** .addAnswerModule兄弟节点 **/
+	z-index: 2111 !important;
+}
+.editAnswerModule .bytemd-toolbar{
+	width: 100%;
+	height: 40px !important;
+	padding-top: 15px !important;
+}
+.editAnswerModule + .van-popup__close-icon{/** .editAnswerModule兄弟节点 **/
+	z-index: 2111 !important;
+}
+
+
+
+/* 图片放大 */
+.medium-zoom-overlay{
+	z-index: 2109 !important;
+}
+.medium-zoom--opened img {
+    z-index: 2110 !important;
+}
+
+.bytemd-editor{
+	/** min-height: calc(100vh - 100px) !important; **/
+	border-top: 1px solid #f2f3f5;
+	border-left: 1px solid #f2f3f5;
+	border-right: 1px solid #f2f3f5;
+	
+	border-radius:4px 4px 0px 0px !important;
+}
+.bytemd-status{
+	/**padding: 8px 12px !important;**/
+	height: 26px !important;
+	border: 1px solid #f2f3f5 !important;
+	border-radius:0px 0px 4px 4px !important;
+}
+.bytemd-preview{
+	border-top: 1px solid #f2f3f5 !important;
+	border-left: 1px solid #f2f3f5 !important;
+	border-right: 1px solid #f2f3f5 !important;
+	border-radius:4px 4px 0px 0px !important;
+}
+.bytemd-help-selectGrade{
+	width: 100%;
+}
+.bytemd-help-gradeItem{
+	width: 100%;
+}
+.bytemd-help-userGrade-needPoint{
+	margin-right: 12px;
+}
+.bytemd-sidebar {
+    border-left: 1px solid transparent !important;
+	border-top: 1px solid transparent !important;
+	border-right: 1px solid transparent !important;
+	border-top-left-radius:4px !important;
+	width: 235px !important;
+	
+}
+/* bytemd图片遮罩层 */
+.medium-zoom--opened .medium-zoom-overlay {
+	opacity: 0.6 !important;
+    z-index: 109;
+}
+.medium-zoom--opened img {
+	z-index: 110;
+}
+.bytemd-body iframe{
+	width:100%; height: 240px;
+}
+.bytemd-body .player{
+	width: 100%;
+	height: 240px;
+	display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background: #000;
+    position: relative;
+    text-align: center;
+}
+.bytemd-body .player .circle{
+	display: inline-block;
+	position: absolute;
+	top: 0;  
+    bottom: 0;  
+    left: 0;  
+    right: 0;  
+    margin: auto;
+	line-height:240px;
+	border-radius:42px;
+	width: 84px;
+	height: 84px;
+	background-color: rgba(255,255,255,0.2);
+}
+.bytemd-body .player .iconBox{
+    display: block;
+    position: relative;
+    width: 84px;
+    height: 84px;
+	
+}
+.bytemd-body .player .iconBox .playIcon{
+    font-size: 50px;
+    position: absolute;  
+    line-height:60px; 
+    width: 42px;
+    height: 42px;
+    top: 0;  
+    bottom: 0;  
+    left: 0px;  
+    right: 0;  
+    margin: auto;
+    color: #fff;
+}
+.bytemd-body .dplayer-process {
+	position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+}
+.bytemd-body .dplayer-process .box{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.bytemd-body .dplayer-process .box .prompt{
+	
+    height: 60px;
+    position: absolute;
+    left: 0px;
+    top: 10px;
+    right: 0px;
+    margin: auto;
+   	padding :0px 10px;
+   	border-radius :3px;
+   	color: #fff;
+   	line-height: 30px;
+   	font-size: 16px;
+   	background-color:rgb(0, 0, 0);
+	opacity:0.7;
+	filter:alpha(opacity=70);
+	text-align: center;
+
+	overflow:hidden; text-overflow:ellipsis; display:-webkit-box; -webkit-box-orient:vertical; -webkit-line-clamp:2;
+}
+
+
+.bytemd-body hide {
+	border: 0;
+	border-left: 3px solid #409EFF;
+	margin-left: 10px;
+	padding: 0.5em;
+	min-height:26px;
+	display: block;
+	margin: 30px 0px 0px 0px;
+	position: relative;
+}
+.bytemd-body .inputValue_10:before {
+	content: '密码: ' attr(input-value) '';
+	color: #409EFF;
+	font-size:14px;
+	position: absolute;
+	margin-top: -30px;
+	line-height: 30px;
+}
+.bytemd-body .inputValue_20:before {
+	content: '回复话题可见';
+	color: #409EFF;
+	font-size:14px;
+	position: absolute;
+	margin-top: -30px;
+	line-height: 30px;
+}
+.bytemd-body .inputValue_30:before {
+	content: '达到等级 ' attr(description) ' 可见';
+	color: #409EFF;
+	font-size:14px;
+	position: absolute;
+	margin-top: -30px;
+	line-height: 30px;
+}
+.bytemd-body .inputValue_40:before {
+	content: '需要支付 ' attr(input-value) ' 积分可见';
+	color: #409EFF;
+	font-size:14px;
+	position: absolute;
+	margin-top: -30px;
+	line-height: 30px;
+}
+.bytemd-body .inputValue_50:before {
+	content: '需要支付 ' attr(input-value) ' 元费用可见';
+	color: #409EFF;
+	font-size:14px;
+	position: absolute;
+	margin-top: -30px;
+	line-height: 30px;
+}
+
+
+/**修改来自
+import 'juejin-markdown-themes/dist/juejin.min.css';
+import 'github-markdown-css/github-markdown.css';**/
+.markdown-body-custom {
+    font-weight: 400;
+  /**overflow-x: hidden;//此属性和 el-image延迟加载有冲突**/
+    overflow-x: visible;
+}
+  .markdown-body-custom h1,
+  .markdown-body-custom h2,
+  .markdown-body-custom h3,
+  .markdown-body-custom h4,
+  .markdown-body-custom h5,
+  .markdown-body-custom h6 {
+    line-height: 1.5;
+    margin-top: 35px;
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+  }
+  .markdown-body-custom h1 {
+    font-size: 24px;
+    line-height: 38px;
+    margin-bottom: 5px;
+  }
+  .markdown-body-custom h2 {
+    font-size: 22px;
+    line-height: 34px;
+    padding-bottom: 12px;
+    border-bottom: 1px solid #ebedf0;
+  }
+  .markdown-body-custom h3 {
+    font-size: 20px;
+    line-height: 28px;
+  }
+  .markdown-body-custom h4 {
+    font-size: 18px;
+    line-height: 26px;
+  }
+  .markdown-body-custom h5 {
+    font-size: 17px;
+    line-height: 24px;
+  }
+  .markdown-body-custom h6 {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .markdown-body-custom p {
+    line-height: inherit;
+    margin-top: 22px;
+    margin-bottom: 22px;
+  }
+  .markdown-body-custom img {
+    max-width: 100%;
+  }
+  .markdown-body-custom hr {
+    border-top: 1px solid #dcdee0;
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    margin-top: 32px;
+    margin-bottom: 32px;
+  }
+
+  .markdown-body-custom code {
+    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+    word-break: break-word;
+    border-radius: 2px;
+    overflow-x: auto;
+    background-color: #fff5f5;
+    color: #ff502c;
+    padding: 0.065em 0.4em;
+  }
+  /**
+  .markdown-body pre {
+    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+    overflow: auto;
+    position: relative;
+    line-height: 1.75;
+  }
+  .markdown-body pre > code {
+    font-size: 12px;
+    padding: 15px 12px;
+    margin: 0;
+    word-break: normal;
+    display: block;
+    overflow-x: auto;
+    color: #333;
+    background: #f8f8f8;
+  }**/
+  .markdown-body-custom a {
+    text-decoration: none;
+  }
+  .markdown-body-custom a:hover, .markdown-body-custom a:active {
+    color: #275b8c;
+  }
+  /**
+  .markdown-body table {
+    display: inline-block !important;
+    font-size: 12px;
+    width: auto;
+    max-width: 100%;
+    overflow: auto;
+    border: solid 1px #f6f6f6;
+  }
+  .markdown-body thead {
+    background: #f6f6f6;
+    color: #000;
+    text-align: left;
+  }
+  .markdown-body tr:nth-child(2n) {
+    background-color: #fcfcfc;
+  }
+  .markdown-body th,
+  .markdown-body td {
+    padding: 12px 7px;
+    line-height: 24px;
+  }
+  .markdown-body td {
+    min-width: 120px;
+  }**/
+  .markdown-body-custom blockquote {
+    color: #969799;
+    padding: 1px 23px;
+    margin: 22px 0;
+    border-left: 4px solid #dcdee0;
+    background-color: #f7f8fa;
+  }
+  .markdown-body-custom blockquote::after {
+    display: block;
+    content: "";
+  }
+  .markdown-body-custom blockquote > p {
+    margin: 10px 0;
+  }
+  .markdown-body-custom ol,
+  .markdown-body-custom ul {
+    padding-left: 28px;
+  }
+  .markdown-body-custom ol li,
+  .markdown-body-custom ul li {
+    margin-bottom: 0;
+    list-style: inherit;
+  }
+  .markdown-body-custom ol li .task-list-item,
+  .markdown-body-custom ul li .task-list-item {
+    list-style: none;
+  }
+  .markdown-body-custom ol li .task-list-item ul,
+  .markdown-body-custom ol li .task-list-item ol,
+  .markdown-body-custom ul li .task-list-item ul,
+  .markdown-body-custom ul li .task-list-item ol {
+    margin-top: 0;
+  }
+  .markdown-body-custom ol ul,
+  .markdown-body-custom ol ol,
+  .markdown-body-custom ul ul,
+  .markdown-body-custom ul ol {
+    margin-top: 3px;
+  }
+  .markdown-body-custom ol li {
+    padding-left: 6px;
+  }
+  .markdown-body-custom .contains-task-list {
+    padding-left: 0;
+  }
+  .markdown-body-custom .task-list-item {
+    list-style: none;
+  }
+  .markdown-body-custom .task-list-item-checkbox{
+	width: 16px;
+	height: 16px;
+	position: relative;
+	top: -1px;
+  }
+  @media (max-width: 720px) {
+    .markdown-body-custom h1 {
+      font-size: 24px;
+    }
+    .markdown-body-custom h2 {
+      font-size: 20px;
+    }
+    .markdown-body-custom h3 {
+      font-size: 18px;
+    }
+  }
