--- a/src/assets/icon/icomoon/style.css
+++ b/src/assets/icon/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?te6uob');
-  src:  url('fonts/icomoon.eot?te6uob#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?te6uob') format('truetype'),
-    url('fonts/icomoon.woff?te6uob') format('woff'),
-    url('fonts/icomoon.svg?te6uob#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?rv5qad');
+  src:  url('fonts/icomoon.eot?rv5qad#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?rv5qad') format('truetype'),
+    url('fonts/icomoon.woff?rv5qad') format('woff'),
+    url('fonts/icomoon.svg?rv5qad#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,234 +25,237 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.cms-add-line:before {
-  content: "\e94b";
-}
-.cms-error-warning-line:before {
-  content: "\e947";
-}
-.cms-map-pin-line:before {
-  content: "\e948";
-}
-.cms-zoom-in-line:before {
-  content: "\e949";
-}
-.cms-login-box-line:before {
-  content: "\e94a";
-}
-.cms-logout-box-r-line:before {
-  content: "\e946";
-}
-.cms-arrow-left-s-line:before {
-  content: "\e944";
-}
-.cms-arrow-right-s-line:before {
-  content: "\e945";
-}
-.cms-smartphone-line:before {
-  content: "\e943";
-}
-.cms-shield-check-line:before {
+.cms-download-2-line:before {
   content: "\e900";
 }
 .cms-caret-right:before {
   content: "\e791";
 }
-.cms-arrow-up-s-line:before {
+.cms-shield-check-line:before {
   content: "\e901";
 }
-.cms-back-to-top:before {
+.cms-arrow-up-s-line:before {
   content: "\e902";
 }
-.cms-edit-line:before {
+.cms-back-to-top:before {
   content: "\e903";
 }
-.cms-angle-down:before {
+.cms-edit-line:before {
   content: "\e904";
 }
-.cms-announcement:before {
+.cms-angle-down:before {
   content: "\e905";
 }
-.cms-append:before {
+.cms-announcement:before {
   content: "\e906";
 }
-.cms-bell:before {
+.cms-append:before {
   content: "\e907";
 }
-.cms-check-circle-solid:before {
+.cms-bell:before {
   content: "\e908";
 }
-.cms-chess-queen-solid:before {
+.cms-check-circle-solid:before {
   content: "\e909";
 }
-.cms-clipboard:before {
+.cms-chess-queen-solid:before {
   content: "\e90a";
 }
-.cms-comment:before {
+.cms-clipboard:before {
   content: "\e90b";
 }
-.cms-commentCount:before {
+.cms-comment:before {
   content: "\e90c";
 }
-.cms-compass-line:before {
+.cms-commentCount:before {
   content: "\e90d";
 }
-.cms-control-play:before {
+.cms-compass-line:before {
   content: "\e90e";
 }
-.cms-deposit:before {
+.cms-control-play:before {
   content: "\e90f";
 }
-.cms-ellipsis-v-solid:before {
+.cms-deposit:before {
   content: "\e910";
 }
-.cms-email:before {
+.cms-ellipsis-v-solid:before {
   content: "\e911";
 }
-.cms-favorites:before {
+.cms-email:before {
   content: "\e912";
 }
-.cms-follower:before {
+.cms-favorites:before {
   content: "\e913";
 }
-.cms-heart:before {
+.cms-follower:before {
   content: "\e914";
 }
-.cms-heart-broken:before {
+.cms-heart:before {
   content: "\e915";
 }
-.cms-help-alt:before {
+.cms-heart-broken:before {
   content: "\e916";
 }
-.cms-home:before {
+.cms-help-alt:before {
   content: "\e917";
 }
-.cms-info-alt:before {
+.cms-home:before {
   content: "\e918";
 }
-.cms-lock-2:before {
+.cms-info-alt:before {
   content: "\e919";
 }
-.cms-lock-solid:before {
+.cms-lock-2:before {
   content: "\e91a";
 }
-.cms-lock-solid-2:before {
+.cms-lock-solid:before {
   content: "\e91b";
 }
-.cms-log:before {
+.cms-lock-solid-2:before {
   content: "\e91c";
 }
-.cms-login:before {
+.cms-log:before {
   content: "\e91d";
 }
-.cms-membershipCard:before {
+.cms-login:before {
   content: "\e91e";
 }
-.cms-menu:before {
+.cms-membershipCard:before {
   content: "\e91f";
 }
-.cms-menu-alt:before {
+.cms-menu:before {
   content: "\e920";
 }
-.cms-order:before {
+.cms-menu-alt:before {
   content: "\e921";
 }
-.cms-pencil:before {
+.cms-order:before {
   content: "\e922";
 }
-.cms-pencil-alt:before {
+.cms-pencil:before {
   content: "\e923";
 }
-.cms-point:before {
+.cms-pencil-alt:before {
   content: "\e924";
 }
-.cms-pulse:before {
+.cms-point:before {
   content: "\e925";
 }
-.cms-question-answer-line:before {
+.cms-pulse:before {
   content: "\e926";
 }
-.cms-quote:before {
+.cms-question-answer-line:before {
   content: "\e927";
 }
-.cms-quote-left-solid:before {
+.cms-quote:before {
   content: "\e928";
 }
-.cms-quote-right-solid:before {
+.cms-quote-left-solid:before {
   content: "\e929";
 }
-.cms-realNameAuthentication:before {
+.cms-quote-right-solid:before {
   content: "\e92a";
 }
-.cms-recharge:before {
+.cms-realNameAuthentication:before {
   content: "\e92b";
 }
-.cms-redEnvelope-1:before {
+.cms-recharge:before {
   content: "\e92c";
 }
-.cms-redEnvelope-2:before {
+.cms-redEnvelope-1:before {
   content: "\e92d";
 }
-.cms-reply:before {
+.cms-redEnvelope-2:before {
   content: "\e92e";
 }
-.cms-reply2:before {
+.cms-reply:before {
   content: "\e92f";
 }
-.cms-search:before {
+.cms-reply2:before {
   content: "\e930";
 }
-.cms-server:before {
+.cms-search:before {
   content: "\e931";
 }
-.cms-settings:before {
+.cms-server:before {
   content: "\e932";
 }
-.cms-tag:before {
+.cms-settings:before {
   content: "\e933";
 }
-.cms-themify-check:before {
+.cms-tag:before {
   content: "\e934";
 }
-.cms-themify-close:before {
+.cms-themify-check:before {
   content: "\e935";
 }
-.cms-thumb-down:before {
+.cms-themify-close:before {
   content: "\e936";
 }
-.cms-thumb-up:before {
+.cms-thumb-down:before {
   content: "\e937";
 }
-.cms-topic:before {
+.cms-thumb-up:before {
   content: "\e938";
 }
-.cms-trash:before {
+.cms-topic:before {
   content: "\e939";
 }
-.cms-trophy-solid:before {
+.cms-trash:before {
   content: "\e93a";
 }
-.cms-unlock-solid:before {
+.cms-trophy-solid:before {
   content: "\e93b";
 }
-.cms-unlock-solid-2:before {
+.cms-unlock-solid:before {
   content: "\e93c";
 }
-.cms-user:before {
+.cms-unlock-solid-2:before {
   content: "\e93d";
 }
-.cms-user2:before {
+.cms-user:before {
   content: "\e93e";
 }
-.cms-view:before {
+.cms-user2:before {
   content: "\e93f";
 }
-.cms-menu-fold-fill:before {
+.cms-view:before {
   content: "\e940";
 }
-.cms-menu-unfold-fill:before {
+.cms-menu-fold-fill:before {
   content: "\e941";
 }
-.cms-chat-line:before {
+.cms-menu-unfold-fill:before {
   content: "\e942";
+}
+.cms-chat-line:before {
+  content: "\e943";
+}
+.cms-smartphone-line:before {
+  content: "\e944";
+}
+.cms-arrow-left-s-line:before {
+  content: "\e945";
+}
+.cms-arrow-right-s-line:before {
+  content: "\e946";
+}
+.cms-logout-box-r-line:before {
+  content: "\e947";
+}
+.cms-error-warning-line:before {
+  content: "\e948";
+}
+.cms-map-pin-line:before {
+  content: "\e949";
+}
+.cms-zoom-in-line:before {
+  content: "\e94a";
+}
+.cms-login-box-line:before {
+  content: "\e94b";
+}
+.cms-add-line:before {
+  content: "\e94c";
 }
